# src/models/Course.js
@@ -6,6 +6,10 @@ const schema = mongoose.Schema(
       type: String,
       required: true,
     },
+    englishTitle: {
+      type: String,
+      required: true,
+    },
     teacherId: {
       type: mongoose.Schema.Types.ObjectId,
       ref: "User",
