# src/modules/users/users.controller.js
@@ -1,5 +1,7 @@
 const { isValidObjectId } = require("mongoose");
 const User = require("../../models/User");
+const Course = require("../../models/Course");
+const Task = require("../../models/Task");
 const { createPaginationData } = require("../../utils/pagination");
 
 exports.getAll = async (req, res, next) => {
@@ -74,6 +76,31 @@ exports.getOne = async (req, res, next) => {
   }
 };
 
+exports.getOneByPhone = async (req, res, next) => {
+  try {
+    const { phone } = req.params;
+
+    const user = await User.findOne({phone});
+
+    if (!user) {
+      return res.status(404).json({
+        message: "کاربر یافت نشد.",
+      });
+    }
+
+    const tasks = await Task.find({userId : user._id});
+
+    const tasksCount = tasks.length;
+
+    return res.status(200).json({
+      user,
+      tasksCount
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
 exports.changeRole = async (req, res, next) => {
   try {
     const { userId } = req.params;
@@ -135,3 +162,59 @@ exports.edit = async (req, res, next) => {
     next(error);
   }
 };
+
+exports.setTeacher = async (req,res,next) => {
+  const {userId} = req.params;
+  const {courseIds} = req.body;
+
+  if (!courseIds) {
+    return res.status(400).json({
+      message : "لطفا آیدی دوره های مدرس را وارد کنید"
+    })
+  }
+
+  if (!isValidObjectId(userId)) {
+    return res.status(400).json({
+      message : "آیدی کاربر معتبر نیست"
+    })
+  }
+
+  const user = await User.findById(userId);
+  if (!user) {
+    return res.status(404).json({ message: "کاربر یافت نشد." });
+  }
+ 
+
+  if (!Array.isArray(courseIds) || courseIds.length === 0) {
+    return res.status(400).json({ message: "لیست دوره‌ها نامعتبر است." });
+  }
+
+  const invalidIds = courseIds.filter(id => !isValidObjectId(id));
+  if (invalidIds.length > 0) {
+    return res.status(400).json({ message: "یک یا چند آیدی دوره نامعتبر است." });
+  }
+
+  const foundCourses = await Course.find({ _id: { $in: courseIds } });
+
+  if (foundCourses.length !== courseIds.length) {
+    return res.status(404).json({ message: "یک یا چند دوره پیدا نشد." });
+
+  }
+  
+  
+  // اضافه کردن آیدی‌هایی که قبلاً نبودن
+  const newCourses = courseIds.filter(
+    id => !user.courses.map(String).includes(String(id))
+  );
+
+
+  
+  user.courses.push(...newCourses);
+  user.role = "TEACHER";
+
+  await user.save();
+
+  return res.status(200).json({
+    message : "نقش کاربر به مدرس تغییر یافت"
+  })
+}
